# ShapeRecognition

./: .gitignore  CMakeLists.txt  README.md  UseGeometry.cpp  UseSVM.cpp
